--- a/content/community/libraries.adoc
+++ b/content/community/libraries.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == Clojure Libraries 
 
 === Clojure Contrib 
