--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == Community Resources 
 
 * http://groups.google.com/group/clojure[Clojure Google Group]
