--- a/content/community/swag.adoc
+++ b/content/community/swag.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == Official Clojure gear
 
 The http://www.zazzle.com/clojureappreciation[Clojure Appreciation store] is the only place to get authorized gear. Proceeds go to the Clojure creator.
