--- a/content/reference/documentation.adoc
+++ b/content/reference/documentation.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == API 
 * http://clojure.github.io/clojure[Clojure API Documentation]
 * <<cheatsheet#,Clojure Cheat Sheet>>
