--- a/content/reference/other_libraries.adoc
+++ b/content/reference/other_libraries.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == Other included Libraries
 
 toc::[]
