--- a/content/reference/protocols.adoc
+++ b/content/reference/protocols.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 == Protocols 
 
 Protocols were introduced in Clojure 1.2.
