--- a/content/reference/vars.adoc
+++ b/content/reference/vars.adoc
@@ -4,6 +4,8 @@ Rich Hickey
 :jbake-type: page
 :toc: macro
 
+ifdef::env-github,env-browser[:outfilesuffix: .adoc]
+
 toc::[]
 
 == Vars and the Global Environment
